--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.69.4"
   },
   "engines": {
     "node": ">=18"
